# yavalath_player

./: CMakeLists.txt  README.md  sources
src/: board.c  board.h  coord.c  coord.h  game.c  game.h  heuristics.c  heuristics.h  hexagon_grid.c  hexagon_grid.h  line.c  line.h  main.c  main.h  minimax.c  minimax.h  opening_book.c  opening_book.h  random.c  random.h  rotation.c  rotation.h  transposition_table.c  transposition_table.h  util.c  util.h
test/: test_board.c  test_board.h  test_game.c  test_game.h  test_hexagon_grid.c  test_hexagon_grid.h  test_main.c  test_main.h  test_minimax.c  test_minimax.h  test_rotation.c  test_rotation.h
test_positions/: double_forced_move.txt  good_for_player_1.txt  instant_win.txt
